<resources>
    <string name="dw_discovery_app_name">EasyPaisaSDK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dw_discovery_hello_blank_fragment">Hello blank fragment</string>
    <string name="dw_discovery_offers_discount"><![CDATA[Offers & Discount]]></string>
    <string name="dw_discovery_in_your_city_discounts">In your City Discounts</string>
    <string name="dw_discovery_filter">Filter</string>
    <string name="dw_discovery_search_discounts">Search Discounts</string>
    <string name="dw_discovery_tim_hortons">Tim Hortons</string>
    <string name="dw_discovery_back">back</string>
    <string name="dw_discovery_banner">banner</string>
    <string name="dw_discovery_see_all">See All</string>
    <string name="dw_discovery_upto_50_discount_on_coffee_nationwide">Upto 50% Discount on Coffee Nationwide</string>
    <string name="dw_discovery_with_easypaisa_premium_debit_card">with easypaisa premium debit card</string>
    <string name="dw_discovery_terms_applied">Terms applied</string>
    <string name="dw_discovery_terms_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>