<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/dw_discovery_white"
    tools:context=".fragments.HomeFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/dw_discovery_image_bg"
        android:src="@drawable/dw_discovery_ic_backs"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Search -->
    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/dw_discovery_search_bar_bg"
        android:drawablePadding="8dp"
        android:hint="@string/dw_discovery_search_discounts"
        android:textColorHint="@color/dw_discovery_gray"
        android:textColor="@color/dw_discovery_black"
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        app:drawableStartCompat="@drawable/dw_discovery_ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.discountworld.easypaisasdk.reusables.TextViewBold
                android:id="@+id/offers_and_discounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dw_discovery_offers_discount"
                android:textColor="@color/dw_discovery_black"
                android:layout_marginStart="16dp"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dw_discovery_white"
                app:tabMode="scrollable"
                app:tabIndicatorColor="@color/dw_discovery_green"
                app:tabIndicatorHeight="3dp"
                app:tabIndicatorFullWidth="true"
                app:tabTextColor="#9E9E9E"
                app:tabSelectedTextColor="@color/dw_discovery_black"
                android:layout_marginHorizontal="16dp"
                app:tabRippleColor="@android:color/transparent"
                app:tabTextAppearance="@style/TabLayoutTextStyle" />


            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dw_discovery_d_gray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">

                    <!-- City Title -->
                    <LinearLayout
                        android:id="@+id/lv_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:weightSum="1">

                        <com.discountworld.easypaisasdk.reusables.TextViewBold
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/dw_discovery_in_your_city_discounts"
                            android:textColor="@color/dw_discovery_black"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_weight="0.8" />

                        <com.discountworld.easypaisasdk.reusables.TextViewMedium
                            android:id="@+id/seeAllCities"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/dw_discovery_see_all"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/dw_discovery_green"
                            android:layout_weight="0.2"
                            android:gravity="end" />

                    </LinearLayout>


                    <!-- Cities -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcy_cities"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:nestedScrollingEnabled="false"/>

                    <!-- Card -->
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/lv_featured_vendor"
                        android:layout_width="match_parent"
                        android:layout_height="298dp"
                        app:cardBackgroundColor="@color/dw_discovery_white"
                        app:strokeColor="@color/dw_discovery_dim_gray"
                        app:cardCornerRadius="16dp">

                        <LinearLayout
                            android:id="@+id/card"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imgBanner"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/dw_discovery_ic_banner"/>

                            <LinearLayout
                                android:padding="12dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.discountworld.easypaisasdk.reusables.TextViewBold
                                    android:id="@+id/txtTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/dw_discovery_black"
                                    android:textStyle="bold"
                                    android:textSize="16sp"/>

                                <com.discountworld.easypaisasdk.reusables.TextViewRegular
                                    android:id="@+id/txtSubtitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/dw_discovery_black"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="2"
                                    android:textSize="12sp"/>

                                <com.discountworld.easypaisasdk.reusables.TextViewRegular
                                    android:id="@+id/txtTerms"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dw_discovery_terms_applied"
                                    android:textColor="@color/dw_discovery_green"
                                    android:textSize="12sp"/>

                            </LinearLayout>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- Top Brands -->
                    <com.discountworld.easypaisasdk.reusables.TextViewBold
                        android:id="@+id/tv_top_brands"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Top Brands"
                        android:textColor="@color/dw_discovery_black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="16dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcy_top_Brands"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:nestedScrollingEnabled="false"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcy_vendors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="48dp"
                        android:nestedScrollingEnabled="false"/>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Waiting for location..."
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <!-- FULL SCREEN LOADER -->
    <FrameLayout
        android:id="@+id/loaderLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dw_discovery_green" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
